<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_fragment"
    android:background="#FDEDE3"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rellayout1">

        <include layout="@layout/snippet_layout_editprofile_toolbar"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rellayout1"
        android:layout_marginTop="30sp">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_edit"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginBottom="5dp"/>


        <TextView
            android:id="@+id/changePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image_edit"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="Click on Photo to Change"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:id="@+id/edit_profile_area"
            android:layout_below="@id/profile_image_edit"
            >

            <Button
                android:id="@+id/delete_image_photo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="120dp"
                android:layout_marginStart="120dp"
                android:background="@drawable/button_shape"
                android:text="Delete Photo"
                android:textColor="#4E260E" />


        </LinearLayout>


        <TextView
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/edit_profile_area"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
        android:text="Name"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/EditFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/usName"
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="match_parent"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="24dp"
        android:padding="10dp"
        android:layout_below="@id/usName"
        tools:layout_editor_absoluteX="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/webname"
        android:layout_width="wrap_content"
        android:layout_marginStart="9dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="9dp"
        android:layout_height="wrap_content"
        android:text="Website link"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/EditWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="9dp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/webname"
        tools:layout_editor_absoluteX="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bioname"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:text="Bio"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/EditBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="216dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_below="@id/bioname"
        tools:layout_editor_absoluteX="0dp" />
    </RelativeLayout>

    </LinearLayout>
</RelativeLayout>

