<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#F99F63"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileToolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:id="@+id/backArrow"
                android:src="@drawable/ic_backarrow"/>

            <TextView
                android:layout_toRightOf="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Edit Profile"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginStart="5dp"
                android:id="@+id/profileName"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:id="@+id/saveChanges"
                android:src="@drawable/ic_checkmark"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>



</com.google.android.material.appbar.AppBarLayout>

</merge>