...

                                </LinearLayout>

                            </LinearLayout>

                            <Button
                                android:id="@+id/edit_profile_button"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="10dp"
                                android:textAlignment="center"
                                android:layout_marginTop="8dp"
...
